# pyminr

./: .gitignore  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  build.sh  build_docker.sh  build_wheel.sh  setup.py
include/: malloc.h
include/win/: asprintf.h  dirent.h
src/: asprintf.c  crypto.c
